client/src/styles.scss
/* ... */
.plansArea {
  h1 {
    color: #404040;
    font-size: 30px;
    text-align: center;
    font-weight: 400;
    margin-top: 44px;

    span {
      color: #A8A8A8;
      font-size: 14px;
      display: block;
      padding-top: 10px;

      @media (max-width: 480px) {
        font-size: 13px;
      }
    }

    @media (max-width: 480px) {
      font-size: 24px;
    }
  }

  .plans {
    width: 85%;
    // changed for spacing at the bottom
    // margin: 40px auto 0;
    margin: 40px auto;

    .plan {
      // float: left;
      @include mb(15px);
      width: 100%;
      -webkit-box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
      box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);

      .planCell {
        width: 33.33%;
        float: left;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
        background: #fff;
        padding: 30px;
        border-right: 1px solid #f0f0f0;
        text-align: center;

        .planHead {
          margin-top: 20px;

          .planImg {
            height: 88px;
            margin: 0 auto;
            position: relative;

            img {
              position: absolute;
              bottom: 0;
              -webkit-transform: translateX(-50%);
              -moz-transform: translateX(-50%);
              -ms-transform: translateX(-50%);
              transform: translateX(-50%);

              &.acencyImg {
                bottom: 17px;
              }
            }
          }

          h2 {
            color: #536470;
            font-weight: 600;
            font-size: 16px;

          }
        }

        ul {
          margin-top: 40px;

          li {
            color: #858788;
            font-size: 14px;
            padding-bottom: 18px;
          }
        }

        .price {
          color: #536470;
          font-size: 40px;
          margin-top: 10px;
        }

        .planBtn {
          -webkit-box-sizing: border-box;
          box-sizing: border-box;
          display: block;
          width: 130px;
          height: 33px;
          color: color(sr-green);
          border: 2px solid color(sr-green);
          border-radius: 25px;
          font-size: 12px;
          font-weight: 600;
          background: #fff;
          cursor: pointer;
          margin: 34px auto 20px;
          -webkit-transition: all 0.5s ease 0s;
          transition: all 0.5s ease 0s;

          &:hover {
            background: color(sr-green);
            color: #fff;
          }

          &.current {
            background: #BBB9D1;
            color: #fff;
            pointer-events: none;
            border-color: #BBB9D1;
          }

          @media (max-width: 640px) {
            @include mt(15px);
          }
        }

        @media (max-width: 640px) {
          float: none;
          width: 100%;
          border: none;
        }

        @media (max-width: 640px) {
          float: none;
          width: 100%;
          border: none;
        }
      }

      @media (max-width: 767px) {
        -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
      }

      @media (max-width: 767px) {
        -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
      }
    }

    .log-stat_msg {
      margin-top: 5px;
    }

    @media (max-width: 767px) {
      width: auto;
      margin-left: 15px;
      margin-right: 15px;
    }

    @media (max-width: 767px) {
      width: auto;
      margin-left: 15px;
      margin-right: 15px;
    }
  }
}
/* ... */

